<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragment.homeCycle.home.settings.SettingsFragment">

    <include layout="@layout/app_bar" />


    <TextView
        android:id="@+id/fragment_settings_tv_edit_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:drawableEnd="@drawable/ic_arrow_forward"
        android:paddingVertical="@dimen/_16sdp"
        android:text="@string/edit_mobile_number"
        android:textColor="@color/black"
        android:textSize="@dimen/_11ssp"
        android:fontFamily="@font/cairo_semibold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:background="@color/gray_btn_bg_color" />

    <TextView
        android:id="@+id/fragment_settings_tv_edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:drawableEnd="@drawable/ic_arrow_forward"
        android:paddingVertical="@dimen/_16sdp"
        android:text="@string/edit_your_name"
        android:textColor="@color/black"
        android:textSize="@dimen/_11ssp"
        android:fontFamily="@font/cairo_semibold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:background="@color/gray_btn_bg_color" />

    <TextView
        android:id="@+id/fragment_settings_tv_edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:drawableEnd="@drawable/ic_arrow_forward"
        android:paddingVertical="@dimen/_16sdp"
        android:text="@string/edit_password"
        android:textColor="@color/black"
        android:textSize="@dimen/_11ssp"
        android:fontFamily="@font/cairo_semibold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:background="@color/gray_btn_bg_color" />

    <TextView
        android:id="@+id/fragment_settings_tv_edit_activities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:drawableEnd="@drawable/ic_arrow_forward"
        android:paddingVertical="@dimen/_16sdp"
        android:text="@string/edit_my_activities"
        android:textColor="@color/black"
        android:textSize="@dimen/_11ssp"
        android:fontFamily="@font/cairo_semibold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:background="@color/gray_btn_bg_color" />

    <TextView
        android:id="@+id/fragment_settings_tv_my_license"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:drawableEnd="@drawable/ic_arrow_forward"
        android:paddingVertical="@dimen/_16sdp"
        android:text="@string/my_commercial_license"
        android:textColor="@color/black"
        android:textSize="@dimen/_11ssp"
        android:fontFamily="@font/cairo_semibold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:background="@color/gray_btn_bg_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_16sdp"
            android:layout_weight="1"
            android:text="@string/language"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            android:fontFamily="@font/cairo_semibold" />

        <TextView
            android:id="@+id/fragment_settings_tv_languages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_16sdp"
            android:text="@string/english"
            android:paddingVertical="@dimen/_3sdp"
            android:paddingHorizontal="@dimen/_8sdp"
            android:background="@drawable/shape_edit_text2"
            android:drawableEnd="@drawable/ic_arrow_drop_down"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            android:fontFamily="@font/cairo_semibold" />
    </LinearLayout>
</LinearLayout>