<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".view.fragment.userCycle.LoginFragment">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/banana_logo"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/cairo_semibold"
            android:text="@string/forgot_password"
            android:textColor="@color/title_color"
            android:textSize="@dimen/_15ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:text="@string/enter_your_mobile_number"
            android:textColor="@color/hint_color"
            android:textSize="@dimen/_13ssp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_forgot_password_til_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:theme="@style/TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:singleLine="true"
                android:textColor="@color/title_color" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/fragment_forgot_password_btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:background="@drawable/button_shape"
            android:fontFamily="@font/cairo_bold"
            android:paddingVertical="@dimen/_6sdp"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp" />

    </LinearLayout>
</ScrollView>

